--- a/index.html
+++ b/index.html
@@ -4,8 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors</title>
+    <script src="java.js" defer></script>
 </head>
 <body>
-    <script src="java.js"></script>
+    <div id = "game">
+        <h1>Rock Paper Scissors Game</h1>
+        <h3>Choose rock, paper, or scissors: </h3>
+
+        <button class="btn">Rock</button>
+        <button class="btn">Paper</button>
+        <button class="btn">Scissors</button>
+    </div>
 </body>
 </html>
